<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LocationsDetailActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/imageViewMap"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/map" />

        <TextView
            android:id="@+id/textViewAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageViewMap"
            android:layout_below="@+id/imageViewMap"
            android:layout_marginTop="14dp"
            android:text="@string/address"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewAddressLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textViewAddressLabel"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textViewCoordinatesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewAddressLabel"
            android:layout_below="@+id/textViewAddressLabel"
            android:layout_marginTop="20dp"
            android:text="@string/coordinates"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewCoordinatesLabel"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textViewCoordinatesLabel"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLatitude"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textViewLatitude"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/checkBoxCarEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewCoordinatesLabel"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="@string/carentry" />

        <CheckBox
            android:id="@+id/checkBoxPowerSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxCarEntry"
            android:layout_alignBottom="@+id/checkBoxCarEntry"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/checkBoxCarEntry"
            android:enabled="false"
            android:text="@string/powersource" />

        <TextView
            android:id="@+id/textViewNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewCoordinatesLabel"
            android:layout_below="@+id/checkBoxCarEntry"
            android:layout_marginTop="10dp"
            android:text="@string/notes"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewNotesLabel"
            android:layout_alignRight="@+id/imageViewMap"
            android:layout_below="@+id/textViewNotesLabel"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />
    </RelativeLayout>

</ScrollView>