<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LocationsEditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/abs__cab_background_top_holo_dark"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/done_button_colors"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageViewTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/abs__ic_cab_done_holo_dark" />

            <TextView
                android:id="@+id/textViewSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/transparentgrey" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/new_location"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/imageViewMap"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/empty_map" />

            <TextView
                android:id="@+id/textViewNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageViewMap"
                android:layout_below="@+id/imageViewMap"
                android:layout_marginTop="14dp"
                android:text="@string/location_name"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewNameLabel"
                android:layout_alignLeft="@+id/editTextAddress"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/textViewNameLabel"
                android:ems="10"
                android:singleLine="true"
                android:textSize="15sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewNameLabel"
                android:layout_below="@+id/textViewNameLabel"
                android:layout_marginTop="25dp"
                android:text="@string/address"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewAddressLabel"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textViewAddressLabel"
                android:ems="10"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewCoordinatesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewAddressLabel"
                android:layout_below="@+id/textViewAddressLabel"
                android:layout_marginTop="25dp"
                android:text="@string/coordinates"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextLatitude"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewCoordinatesLabel"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textViewCoordinatesLabel"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="0.0"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextLongitude"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextLatitude"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/editTextLatitude"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="0.0"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/checkBoxCarEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewCoordinatesLabel"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/carentry" />

            <CheckBox
                android:id="@+id/checkBoxPowerSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBoxCarEntry"
                android:layout_alignBottom="@+id/checkBoxCarEntry"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/checkBoxCarEntry"
                android:text="@string/powersource" />

            <TextView
                android:id="@+id/textViewNotesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewCoordinatesLabel"
                android:layout_below="@+id/checkBoxCarEntry"
                android:layout_marginTop="10dp"
                android:text="@string/notes"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewNotesLabel"
                android:layout_alignRight="@+id/imageViewMap"
                android:layout_below="@+id/textViewNotesLabel"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:textSize="15sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>