<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeadlinesEditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/abs__cab_background_top_holo_dark"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/done_button_colors"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageViewTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/abs__ic_cab_done_holo_dark" />

            <TextView
                android:id="@+id/textViewSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:background="@color/transparentgrey"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/new_deadline"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textSize="20sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <EditText
                android:id="@+id/editTextDeadlineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/deadline_name"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextDeadlineName"
                android:layout_marginTop="10dp"
                android:text="@string/when"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewDateLabel"
                android:layout_below="@+id/textViewDateLabel"
                android:layout_marginTop="10dp"
                android:text="2013.04.18, Thursday" />

            <Button
                android:id="@+id/buttonStartTime"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewDateLabel"
                android:layout_below="@+id/buttonDate"
                android:layout_marginTop="10dp"
                android:text="12:00" />

            <TextView
                android:id="@+id/textViewSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonStartTime"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/buttonStartTime"
                android:text="-"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonEndTime"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonStartTime"
                android:layout_alignBottom="@+id/buttonStartTime"
                android:layout_toRightOf="@+id/textViewSeparator"
                android:text="13:00" />

            <CheckBox
                android:id="@+id/checkBoxAllDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonStartTime"
                android:layout_below="@+id/buttonStartTime"
                android:layout_marginTop="6dp"
                android:text="All Day" />

            <EditText
                android:id="@+id/editTextDeadlineLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/checkBoxAllDay"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/location" />

            <EditText
                android:id="@+id/editTextDeadlineNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editTextDeadlineLocation"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/deadlinenotes" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>