<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EquipmentEditActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/abs__cab_background_top_holo_dark"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/done_button_colors"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageViewTick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/abs__ic_cab_done_holo_dark" />

            <TextView
                android:id="@+id/textViewSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@color/transparentgrey" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/new_equipment"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textViewNameLabel"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/equipmentname" />

            <EditText
                android:id="@+id/editTextEquipmentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textViewNameLabel"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:singleLine="true"
                android:textSize="15sp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewCategoryLabel"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEquipmentName"
                android:text="@string/equipmentcategory" />

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewCategoryLabel"
                android:layout_below="@+id/textViewCategoryLabel"
                android:layout_marginTop="10dp"
                tools:listitem="@android:layout/simple_spinner_item" />

            <TextView
                android:id="@+id/textViewEquipmentNotesLabel"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerCategory"
                android:layout_marginTop="10dp"
                android:text="@string/equipmentnotes" />

            <EditText
                android:id="@+id/editTextEquipmentNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textViewEquipmentNotesLabel"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textViewEquipmentNotesLabel"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:textSize="15sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>